// Original file: src/proto/payment.proto


export interface GetAllSubscriptionsRequest {
  'searchText'?: (string);
  'page'?: (number);
  'startDate'?: (string);
  'endDate'?: (string);
}

export interface GetAllSubscriptionsRequest__Output {
  'searchText'?: (string);
  'page'?: (number);
  'startDate'?: (string);
  'endDate'?: (string);
}
